--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>🎺 Welcome to History Road 🎺</p>
 
     <audio controls preload="none">
-   	<source src="db-content/ep1.mp3" type="audio/mp3">
+   	<source src="https://s3.amazonaws.com/db.podplay.content/ep1.mp3" type="audio/mp3">
    </audio>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
